# CourseWork

./: CMakeLists.txt  Coursach.cpp  README.md  SimpleNetwork.py  requirements.txt  utilities.py
Mask_RCNN-master/mrcnn/: visualize_new.py
srgan-master/: config.py  main.py
yolo/: YoloDetect.py
